--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
 <div class = 'instructionText'>To view projects, hover over dots. Clicking a dot will open the corresponding site in a new page</div>
 		<div class = 'popUp' id = '#popUp0'>
 			<div class = 'screenImage0'>
-			<img src="assets/bubble_sm.jpg">
+			<img src="assets/bubble_sm.jpg"></img>
 			</div>
 			<span class = 'sellText'><p> An audio web experience.</p></span>
 		</div>
 
 		<div class = 'popUp' id = '#popUp1'>
-			<div class = 'screenImage'>
+			<div class = 'screenImage1'></img>
+			<img src="assets/storyAssignment.jpg">
 			</div>
 			<span class = 'sellText'><p> A 4 - 6 panel "interactive" comic. </p></span>
 		</div>
 
 		<div class = 'popUp' id = '#popUp2'>
 			<div class = 'screenImage3'>
-			<img src="assets/groupAssign_3_sm.jpg">
+			<img src="assets/groupAssign_3_sm.jpg"></img>
 			</img>
 			</div>
 			<span class = 'sellText'><p> A web page for the launch of "something new". This was a group project, conceived and executed with two other class members.</p></span>
